--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label class="todo-list__label">
           <input type="checkbox" name="" id="" />
           <i class="check"></i>
-          <span>Complete Assignment</span>
+          <span>Complete Exam</span>
         </label>
         <label class="todo-list__label">
           <input type="checkbox" name="" id="" />
